# GearBot-2-version-1

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  config-DEFAULT.toml  rustfmt.toml  team.toml
.cargo/: config
.github/workflows/: build.yml  test.yml
assets/: logo
lang/: en_US.json
lang/en_US/: commands.json  logs.json
migrations/: 1_inital.sql  V1__inital.sql
src/: crypto.rs  error.rs  main.rs  parser.rs  translation.rs
src/cache/: channel.rs  emoji.rs  guild.rs  member.rs  mod.rs  user.rs
src/commands/: mod.rs
src/commands/admin/: check_cache.rs  mod.rs  restart.rs  server_info.rs
src/commands/basic/: about.rs  coinflip.rs  echo.rs  help.rs  mod.rs  ping.rs  quote.rs  uid.rs
src/commands/debug/: config.rs  mod.rs  permissions.rs  test.rs
src/commands/meta/: builder.rs  mod.rs  nodes.rs
src/commands/misc/: emoji.rs  mod.rs
src/commands/moderation/: mod.rs  userinfo.rs
src/core/: bot_config.rs  cold_resume_data.rs  context.rs  gearbot.rs  guild_config.rs  logging.rs  mod.rs  parser.rs
src/core/bot_context/: cold_resume.rs  data_access.rs  logpump.rs  mod.rs  permissions.rs  stats.rs  status.rs
src/core/cache/: channel.rs  emoji.rs  guild.rs  member.rs  mod.rs  role.rs  structs.rs  user.rs
src/core/command_context/: mod.rs  object_fetcher.rs  permissions.rs
src/core/context/: cache.rs  database.rs  logpump.rs  mod.rs  permissions.rs  stats.rs
src/core/context/bot/: cache.rs  cold_resume.rs  data_access.rs  database.rs  logpump.rs  mod.rs  permissions.rs  stats.rs  status.rs
src/core/context/command/: bouncers.rs  command_message.rs  messaging.rs  mod.rs  object_fetcher.rs  permissions.rs
src/core/context/guild_context/: messaging.rs  mod.rs  object_fetcher.rs  permissions.rs
src/core/handlers/: cache.rs  commands.rs  general.rs  mod.rs  modlog.rs  shard_event_logger.rs
src/core/logpump/: log_data.rs  log_filter.rs  log_type.rs  mod.rs
src/core/reactors/: emoji_list_reactor.rs  mod.rs  reactor_controller.rs
src/database/: cache.rs  configs.rs  guild.rs  mod.rs  redis.rs  structures.rs
src/database/migrations/: mod.rs
src/database/redis/: api_structs.rs  mod.rs  team_info.rs
src/database/redis/api_handlers/: api_structs.rs  mod.rs  mutual_guilds.rs  team_info.rs  user_info.rs
src/gears/: mod.rs
src/gears/basic/: about.rs  coinflip.rs  echo.rs  mod.rs  ping.rs
src/handlers/: commands.rs  general.rs
src/parser/: mod.rs  parser.rs
src/translation/: mod.rs
src/utils/: emoji.rs  errors.rs  log_types.rs  matchers.rs  mod.rs  pattern.rs
src/utils/errors/: mod.rs
