[package]
name = "gearbot"
version = "0.1.0"
authors = ["AEnterprise <aenterprise@aenterprise.info>", "BlackHoleFox <blackholefoxdev@gmail.com>", "GearBot Contributors"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.6"
bitflags = "1.2"
chrono = "0.4"
ctrlc = { version = "3", features = ["termination"] }
darkredis = "0.7"
dashmap = { version = "4.0.0-rc6", features=["serde"] }
flexi_logger = { version = "0.15", default-features = false, features = ["colors", "specfile", "ziplogs"] }
fluent-bundle = "0.12"
futures-util = { version = "0.3", default-features = false }
git-version = "0.3"
hyper = { version = "0.13", default-features = false }
lazy_static = "1.4"
log = "0.4"
num-integer="0.1"
once_cell = "1.4"
prometheus = { version = "0.10", default-features = false }
rand = "0.7"
regex = "1.3"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1"
sqlx =  { version = "0.4.0-beta.1", default-features = false, features = ["postgres", "json", "runtime-tokio", "macros", "migrate"] }
tokio = { version = "0.2", default-features = false, features = ["macros", "sync", "rt-core"] }
toml = "0.5"
twilight-embed-builder = "0.1"
twilight-gateway = {version="0.1", default-features=false, features=["rustls", "simd-json", "simd-zlib"]}
twilight-http = "0.1"
twilight-model = "0.1"
#twilight = { path="../../../rust/twilight/twilight" }
url = "2.1"
unic-langid = { version = "0.9", features = ["macros", "serde"] }

[profile.dev]
debug = 0

[profile.release]
lto = true