[package]
name = "gearbot"
version = "0.1.0"
authors = ["AEnterprise <aenterprise@aenterprise.info>", "BlackHoleFox <blackholefoxdev@gmail.com>", "GearBot Contributors"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.8"
bitflags = "1.2"
chrono = "0.4"
ctrlc = { version = "3", features = ["termination"] }
darkredis = "0.7"
flexi_logger = { version = "0.16", default-features = false, features = ["colors", "specfile", "compress"] }
fluent-bundle = "0.13"
futures-util = { version = "0.3", default-features = false }
git-version = "0.3"
hyper = { version = "0.13", default-features = false }
lazy_static = "1.4"
log = "0.4"
num-integer="0.1"
once_cell = "1.5"
prometheus = { version = "0.11", default-features = false }
rand = "0.8"
regex = "1.4"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1"
sqlx =  { version = "0.4", default-features = false, features = ["postgres", "json", "runtime-tokio-rustls", "macros", "migrate"] }
tokio = { version = "0.2", default-features = false, features = ["macros", "sync", "rt-core"] }
toml = "0.5"
twilight-embed-builder = "0.2"
twilight-gateway = { version="0.2", default-features=false, features=["rustls", "simd-json", "simd-zlib"] }
twilight-http = "0.2"
twilight-model = "0.3"
#twilight-embed-builder = { git="https://github.com/Erk-/twilight", branch="fix/webhook-execute-204-broken"}
#twilight-gateway = { git="https://github.com/Erk-/twilight", branch="fix/webhook-execute-204-broken"}
#twilight-http = { git="https://github.com/Erk-/twilight", branch="fix/webhook-execute-204-broken"}
#twilight-model = { git="https://github.com/Erk-/twilight", branch="fix/webhook-execute-204-broken"}
url = "2.2"
unic-langid = { version = "0.9", features = ["macros", "serde"] }
uuid = { version = "0.8", features = ["serde", "v4"], default_features = false }

[profile.dev]
debug = 0

[profile.release]
lto = true